# alder

./: CMakeLists.txt  README.md
include/alder/: machine.h  version.h
src/: machine.cpp
test/: machine_test.cpp
